test/success/named_arg/simple/main.sk
module Main {

fn foo(bar: Int) {
    assert(bar == 42);
}

fn main() {
    foo(bar: 42);
}

}