test/errors/default_arg/wrong_type/main.sk
module Main {

fn foo(v: Int = ()) {
}

fn main() {
}

}